--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <h2><a href="#inicio" ><img src="img/logo.jpg"></a></h2>
             <nav>
-                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="#nosotros">NOSOTROS</a></li>
                 <li><a href="#quepuede">¿Que puede donar?</a></li>
                 <li><a href="#caracteristicas">Caracteristicas</a></li>
                 <li><a href="#contacto">Contacto</a></li>
