--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body >
         <header>
-            <h2><a href="#inicio" ><img src="img/logo.jpg"></a></h2>
+            <h2><a href="#inicio" ><img src="img/logo.jpg" width="150px"></a></h2>
             <nav>
                 <li><a href="#nosotros">NOSOTROS</a></li>
                 <li><a href="#quepuede">¿QUE PUEDE DONAR?</a></li>
